updated comment/edit layout, post/edit layout and displays

--- a/app/views/comments/edit.erb
+++ b/app/views/comments/edit.erb
@@ -70,6 +70,6 @@ Original Comment:
             <input id="hidden" type="hidden" name="_method" value="delete">
             <input type="submit" class="btn btn-primary" id="comment-delete-button" value="Delete">
         </form>
-    </div>
+    </div> <!-- close .container -->
 </section>
 
