--- a/app/views/posts/edit.erb
+++ b/app/views/posts/edit.erb
@@ -1,90 +1,97 @@
-<div class="container-fluid category-title">
-  <div class="row">
-    <div class ="col-8">
-      <nav aria-label="breadcrumb customnav">
-      <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="/">Home</a></li>
-        <li class="breadcrumb-item"><a href="/categories/<%= @category.title %>/posts"><%= @category.title.capitalize %></a></li>
-      </ol>
-      </nav>
+<!-- HEADER BREADCRUMBS -->
+
+    <div class="container-fluid category-title">
+    <div class="row">
+        <div class ="col-8">
+        <nav aria-label="breadcrumb customnav">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="/">Home</a></li>
+            <li class="breadcrumb-item"><a href="/categories/<%= @category.title %>/posts"><%= @category.title.capitalize %></a></li>
+        </ol>
+        </nav>
+        </div>
+
+        <div class=col-4 ml-1">
+        <form action="/categories/<%= @category.title %>/posts/new"> <input type="submit" class="postbutton" value="New Post"> </form>
+        </div>
+    </div>
     </div>
 
-    <div class=col-4 ml-1">
-      <form action="/categories/<%= @category.title %>/posts/new"> <input type="submit" class="postbutton" value="New Post"> </form>
-    </div>
-  </div>
-</div>
+    <section class="flashmessage"><%= flash[:message] %></section>
 
-<section class="flashmessage"><%= flash[:message] %></section>
+<!-- ORIGINAL POST DISPLAY -->
 
-Original Post:
-
-<div class= "container top-post">
-    <div class= "row">
-        <div class="col-sm-10 offset-sm-1 col-md-10 offset-md-1 col-lg-10 offset-lg-1">
-            <div class="container post">
-                <div class="row">
-                    <div class="col-3 user-info pull-left align-self-center">
-                        <div class="avatar">
-                            <img src="../images/no-photo.png" class="align-self-center mr-2">
-                            <p><%= (User.find(@post.user_id)).username %></p>
-                            <form><input type="button" value="+1" class="like-button align-self-center mr-2"> <%= @post.score %></form>
-                        </div>
-                    </div>
-                    
-                    <div class="col-9 post-info pull-left">
-                        <div class="post-title">
-                            <section><%= @post.city.capitalize %> / <%= @post.title %></section>
-                            <section><%= @post.location %></section>
-                        </div>
-                        <p><%= @post.content %></p>    
-                        <section class="post-footer">Posted at <%= @post.created_at %></section>
-                    </div>
-                    
-                    <div class="postbottom">
-
-                        <div class="clearfix">
-                        
-                        </div>
-                    </div>
-                </div> <!-- close .row -->
-            </div> <!-- close .container -->
-        </div> 
-    </div> <!-- close .row -->
-</div> <!-- close .container -->
-
-<form action="/categories/<%= @category.title %>/posts/<%= @post.id %>" method="post">
-    <input id="hidden" type="hidden" name="_method" value="patch">
-        <div class="container new-post">
-        
-                <h5>Editing your post in <%=@category.title.capitalize%></h5>
-                <div class="form-group">
-                    <label for="title">Title</label>
-                    <input type="text" class="form-control" name="post[title]" placeholder="<%= @post.title %>">
-                </div>
-
-                <div class="form-group">
-                    <label for="exampleFormControlInput1">City</label>
-                    <input type="text" class="form-control" name="post[city]" placeholder="<%= @post.city %>">
-                </div>
-
-                <div class="form-group">
-                    <label for="location">Location</label>
-                    <input type="text" class="form-control" name="post[location]" placeholder="<%= @post.location %>">
-                </div>
-
-                <div class="form-group">
-                    <label for="content">Content</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" name="post[content]" rows="3" placeholder="<%= @post.content %>"></textarea>
-                </div>
-
-                <input type="submit" class="btn btn-primary">
-            </form>
-       
+    <div class= "container top-post">
+        <div class= "row">
+            <h5 class="op-header">Original Post:</h5>
+            <div class="col-sm-10 offset-sm-1 col-md-10 offset-md-1 col-lg-10 offset-lg-1">
+                <div class="container post">
+                    <div class="top-wrap">
+                            <div class="user-info pull-left">
+                                <div class="avatar">
+                                    <img src="../images/no-photo.png" class="align-self-center mr-2">
+                                    <form><input type="button" value="+1" class="like-button align-self-center mr-2"> <%= @post.score %></form>
+                                </div> <!-- close .avatar -->
+                            </div> <!-- close .user-info -->
+                                    
+                            <div class="post-info pull-left">
+                                <div class="post-title post-info pull-left">
+                                    <p><span><%= (User.find(@post.user_id)).username %>: <%= @post.city.split(" ").map{|word| word.capitalize}.join(" ") %> / <%= @post.title %></span></p>
+                                    <span><%= @post.location %></span>
+                                </div>
+                                <div class="post-info">
+                                        <p><span><%= @post.content %></span></p>    
+                                    </div>
+                                <div class="post-footer-section">
+                                    <span class="post-info replies-count">Replies: <%= @post.comments.count%></span>
+                                    <span class="post-info post-footer">Posted at <%= @post.created_at %></span>
+                                </div>
+                            </div> <!-- close .post-info -->
+                        </div> <!-- close .top-wrap -->
+                    </div> <!-- close .row -->
+                </div> <!-- close .container -->
+            </div> 
+        </div> <!-- close .row -->
     </div> <!-- close .container -->
-</form>
 
-<form action="/categories/<%= @category.title %>/posts/<%= @post.id %>/delete" method="post">
-    <input id="hidden" type="hidden" name="_method" value="delete">
-    <input type="submit" value="Delete">
-</form>
+<!-- POST EDIT SECTION -->
+
+    <section>
+        <div class="container">
+            <form action="/categories/<%= @category.title %>/posts/<%= @post.id %>" method="post">
+                <input id="hidden" type="hidden" name="_method" value="patch">
+                    <div class="container new-post">
+                    
+                            <h5>Editing your post in <%=@category.title.capitalize%>:</h5>
+                            <div class="form-group">
+                                <label for="title">Title</label>
+                                <input type="text" class="form-control" name="post[title]" placeholder="<%= @post.title %>">
+                            </div>
+
+                            <div class="form-group">
+                                <label for="exampleFormControlInput1">City</label>
+                                <input type="text" class="form-control" name="post[city]" placeholder="<%= @post.city %>">
+                            </div>
+
+                            <div class="form-group">
+                                <label for="location">Location</label>
+                                <input type="text" class="form-control" name="post[location]" placeholder="<%= @post.location %>">
+                            </div>
+
+                            <div class="form-group">
+                                <label for="content">Content</label>
+                                <textarea class="form-control" id="exampleFormControlTextarea1" name="post[content]" rows="3" placeholder="<%= @post.content %>"></textarea>
+                            </div>
+
+                            <input type="submit" id="comment-reply-button" class="btn btn-primary">
+                        </form>
+                
+                </div> <!-- close .container -->
+            </form>
+
+            <form action="/categories/<%= @category.title %>/posts/<%= @post.id %>/delete" method="post">
+                <input id="hidden" type="hidden" name="_method" value="delete">
+                <input type="submit" class="btn btn-primary" id="comment-delete-button" value="Delete">
+            </form>
+        </div>
+    </section>
