--- a/public/css/style.css
+++ b/public/css/style.css
@@ -140,6 +140,9 @@ body {
     font-weight: bold;
     color: #546578;
 }
+.op-header{
+    margin-left: 20px;
+}
 
 .comment-replies {
     padding-bottom: 20px;
