--- a/app/views/posts/show.erb
+++ b/app/views/posts/show.erb
@@ -1,3 +1,5 @@
+<!-- HEADER BREADCRUMBS -->
+
 <div class="container-fluid category-title">
     <div class="row">
         <div class ="col-8">
@@ -14,6 +16,8 @@
         </div>
     </div> <!-- close .row -->
 </div> <!-- close .container-fluid -->
+
+<!-- POST DISPLAY -->
 
 <div class="container-fluid">
     <section class="flashmessage"><%= flash[:message] %></section>
@@ -45,22 +49,21 @@
                                 </div>
                             </div> <!-- close .post-info -->
                         </div> <!-- close .top-wrap -->
-                                
-                        
                     </div> <!-- close .post -->
+
                     <div class="row comment-replies">
-                    <div class="col-2 postbottom align-item-center">
-                                <% if logged_in && @post.user_id == current_user.id %>
-                                    <form action="/categories/<%= @category.title %>/posts/<%= @post.id %>/edit" method="get">
-                                        <input type="submit" class="cbut text-center" value="Edit">
-                                    </form>
-                                <% else %>
-                                    <form class="button-in-form" action="/categories/<%= @category.title %>/posts/<%= @post.id %>/comments/new" method="get">
-                                        <input type="submit" class="cbut text-center" value="Reply">
-                                    </form>
-                                <% end %>            
-                    </div> <!-- close .postbottom -->
-                    </div>
+                        <div class="col-2 postbottom align-item-center">
+                                    <% if logged_in && @post.user_id == current_user.id %>
+                                        <form action="/categories/<%= @category.title %>/posts/<%= @post.id %>/edit" method="get">
+                                            <input type="submit" class="cbut text-center" value="Edit">
+                                        </form>
+                                    <% else %>
+                                        <form class="button-in-form" action="/categories/<%= @category.title %>/posts/<%= @post.id %>/comments/new" method="get">
+                                            <input type="submit" class="cbut text-center" value="Reply">
+                                        </form>
+                                    <% end %>            
+                        </div> <!-- close .postbottom -->
+                    </div> <!-- close .row -->
             
                             
                     <% @comments.each do |comment| %>
