--- a/app/views/users/edit.erb
+++ b/app/views/users/edit.erb
@@ -1,11 +1,11 @@
 <section class="flashmessage"><%= flash[:message] %></section>
 
-<div class="container new-post">
+<div class="container edit-user-info">
     <div class="row">
+    <h5>My Account Information:</h5>
         <form action="/users/profile/<%= @user.id %>" method="post">
             <input id="hidden" type="hidden" name="_method" value="patch">
 
-            <h5>My Account Information:</h5>
             <div class="form-group">
                 <label for="title">Username: </label>
                 <input type="text" class="form-control" name="user[username]" placeholder="<%= current_user.username %>">
@@ -16,16 +16,12 @@
                 <input type="text" class="form-control" name="user[email]" placeholder="<%= current_user.email %>"
             </div>
 
-            In order to finalize changes, please confirm your password:
-
             <div class="form-group">
-                    <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
-                        <input type="password" class="form-control" id="inputPassword3" name="user[password]" placeholder="Password">
-                        <div class="reminder">*Required</div>
-                    </div>
+                <label for="inputPassword3">Password</label>
+                <input type="password" class="form-control" id="inputPassword3" name="user[password]" placeholder="Password">
             </div>
             
-            <input type="submit" class="btn btn-primary">
+            <input type="submit" class="btn btn-primary" id="user-submit-button">
         </form>
     </div> <!-- close .row -->
 </div> <!-- close .container -->
