--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
 
+    
     <title>Foodie Finds</title>
     
     <base href="/">
@@ -17,6 +18,8 @@
     <link href="https://fonts.googleapis.com/css?family=BioRhyme|Black+Ops+One|Bungee|Bungee+Shade|Creepster|Ewert|Fruktur|Gravitas+One|Monoton|Orbitron|Pacifico|Rubik:900" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel='icon' href='favicon.ico' type='image/x-icon' sizes="16x16" />
+    
   </head>
   <body>
     <div class="container-fluid my-nav">
