added LICENSE.md, updated spec file

--- a/app/views/users/edit.erb
+++ b/app/views/users/edit.erb
@@ -18,7 +18,7 @@
 
             <div class="form-group">
                 <label for="inputPassword3">Password</label>
-                <input type="password" class="form-control" id="inputPassword3" name="password" placeholder="Password">
+                <input type="password" class="form-control" id="inputPassword3" name="user[password]" placeholder="Password">
             </div>
             
             <input type="submit" class="btn btn-primary" id="user-submit-button">
