--- a/app/views/users/edit.erb
+++ b/app/views/users/edit.erb
@@ -3,11 +3,13 @@
 <div class="container edit-user-info">
     <div class="row">
     <h5>My Account Information:</h5>
+
+    <p>In order to change your username or email, please fill out the appropriate field below and enter your password. Please update only those fields that you wish to update.</p>
         <form action="/users/profile/<%= @user.id %>" method="post">
             <input id="hidden" type="hidden" name="_method" value="patch">
 
             <div class="form-group">
-                <label for="title">Username: </label>
+                <label for="title">Username</label>
                 <input type="text" class="form-control" name="user[username]" placeholder="<%= current_user.username %>">
             </div>
 
@@ -17,7 +19,7 @@
             </div>
 
             <div class="form-group">
-                <label for="inputPassword3">Password</label>
+                <label for="inputPassword3">Password (Required to Submit Changes)</label>
                 <input type="password" class="form-control" id="inputPassword3" name="password" placeholder="Password">
             </div>
             
