--- a/app/views/posts/show.erb
+++ b/app/views/posts/show.erb
@@ -65,7 +65,8 @@
                         </div> <!-- close .postbottom -->
                     </div> <!-- close .row -->
             
-                            
+<!-- INDIVIDUAL COMMENTS DISPLAY --> 
+                    
                     <% @comments.each do |comment| %>
                         <div class="row new-comment">
                             <div class="col-lg-10 col-md-10">
@@ -107,6 +108,8 @@
                         </div> <!-- close .row -->
                     <% end %>
                 </div> <!-- close .col-lg-8 -->
+
+<!-- CATEGORIES DISPLAY -->
 
                 <div class="col-lg-3 col-md-3">
                     <div class="card mx-auto cats-list" style="width: 10rem;">
