updated recent posts limit to 10, added HTML section notes

--- a/app/views/comments/new.erb
+++ b/app/views/comments/new.erb
@@ -1,3 +1,5 @@
+<!-- HEADER BREADCRUMBS -->
+
 <div class="container-fluid category-title">
   <div class="row">
     <div class ="col-8">
@@ -16,6 +18,8 @@
 </div>
 
 <section class="flashmessage"><%= flash[:message] %></section>
+
+<!-- ORIGINAL POST REFERENCE DISPLAY -->
 
 <div class= "container top-post">
     <div class= "row">
@@ -46,6 +50,8 @@
         </div> 
     </div> <!-- close .row -->
 </div> <!-- close .container -->
+
+<!-- NEW COMMENT FORM DISPLAY -->
 
 <div class="container">
     <div class="row">
