--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -1,5 +1,7 @@
 <section class="flashmessage"><%= flash[:message] %></section>
 
+<!-- WELCOME DESCRIPTION SECTION -->
+
 <div class="container">
   <div class="row">
     <div class="col-sm-12 col-md-12 col-lg-12 justify-content-center">
@@ -18,6 +20,8 @@
         </div> <!-- close .col -->
     </div> <!-- close .row -->
 </div> <!-- close .container -->
+
+<!-- RECENTLY CREATED POSTS DISPLAY -->
 
 <div class="container-fluid">
     <section class="content">
@@ -54,9 +58,12 @@
                             </div> <!-- close .top-wrap -->
                           </div> <!-- close .post -->
                         </div> <!-- close .col-lg-12 -->
-                   
-                  <% end %>
+
+                <% end %>   
                 </div>      
+
+<!-- CATEGORIES DISPLAY -->
+
                 <div class="col-lg-3 col-md-3">
                 <p class="recent-posts">Categories:<p>
                     <div class="card mx-auto cats-list" style="width: 10rem;">
