--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -2,7 +2,7 @@
 
 <div class="container new-post profile-posts">
     <div class="row">
-        <form action="/users/profile/<%= @user.id %>/edit" method="get">
+        <form action="/users/<%= @user.id %>/edit" method="get">
 
             <h5>My Account Information:</h5>
             <div class="form-group">
