--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -69,7 +69,7 @@
                     <div class="card mx-auto cats-list" style="width: 10rem;">
                         <ul class="list-group list-group-flush d-flex justify-content-between align-items-left align-content-center ml-3">
                             <% @categories.each do |category| %>
-                                <li class="category-listing"><a href="/categories/<%=category.title%>/posts" class=""><%=category.title.split(" ").map{|word| word.capitalize}.join(" ")%><span class="badge pull-right">#</span></a></li> 
+                                <li class="category-listing"><a href="/categories/<%=category.title%>/posts" class=""><%=category.title.split(" ").map{|word| word.capitalize}.join(" ")%><span class="badge pull-right">- <%= category.posts.count %></span></a></li> 
                             <% end %>
                         </ul>
                     </div> <!-- close .card -->
